--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native": "0.72.0",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-orientation-locker": "^1.6.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0"
   },
