--- a/ios/WATO/Info.plist
+++ b/ios/WATO/Info.plist
@@ -62,6 +62,7 @@
 		<string>Inter-Medium.ttf</string>
 		<string>Inter-SemiBold.ttf</string>
 		<string>GT-Super-Display-Bold-Trial.ttf</string>
+		<string>PTSerif-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
