--- a/ios/link-assets-manifest.json
+++ b/ios/link-assets-manifest.json
@@ -34,6 +34,10 @@
       "sha1": "5e0c44e57e7e090252d79f622899e67585bb892c"
     },
     {
+      "path": "src/assets/fonts/PTSerif-Regular.ttf",
+      "sha1": "9ea0ea4d9ed8fda292db458366dbd9af013eced7"
+    },
+    {
       "path": "src/assets/fonts/Sequel Sans Black Disp.ttf",
       "sha1": "2157aead131ad9ee7e2fc25858a441257e74d903"
     }
