--- a/ios/WATO/Info.plist
+++ b/ios/WATO/Info.plist
@@ -36,7 +36,20 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string></string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>GT-Super-Display-Regular-Trial.ttf</string>
+		<string>Inter-Regular.ttf</string>
+		<string>Sequel Sans Black Disp.ttf</string>
+		<string>GT-Super-Display-Medium-Trial.ttf</string>
+		<string>GT-Super-Display-Super-Trial.ttf</string>
+		<string>Inter-Bold.ttf</string>
+		<string>Inter-Medium.ttf</string>
+		<string>Inter-SemiBold.ttf</string>
+		<string>GT-Super-Display-Bold-Trial.ttf</string>
+		<string>PTSerif-Regular.ttf</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -51,18 +64,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>UIAppFonts</key>
-	<array>
-		<string>GT-Super-Display-Regular-Trial.ttf</string>
-		<string>Inter-Regular.ttf</string>
-		<string>Sequel Sans Black Disp.ttf</string>
-		<string>GT-Super-Display-Medium-Trial.ttf</string>
-		<string>GT-Super-Display-Super-Trial.ttf</string>
-		<string>Inter-Bold.ttf</string>
-		<string>Inter-Medium.ttf</string>
-		<string>Inter-SemiBold.ttf</string>
-		<string>GT-Super-Display-Bold-Trial.ttf</string>
-		<string>PTSerif-Regular.ttf</string>
-	</array>
 </dict>
 </plist>
